--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
     "iscroll": "^5.2.0",
+    "jquery": "^3.2.0",
     "react": "^15.4.0",
     "react-anything-sortable": "^1.6.1",
     "react-dom": "^15.4.0",
     "react-iscroll": "^1.1.1",
+    "react-resizable": "^1.6.0",
     "react-sortable": "^1.2.0"
   },
   "devDependencies": {
