--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^15.4.0",
     "react-anything-sortable": "^1.6.1",
     "react-dom": "^15.4.0",
+    "react-id-swiper": "^1.3.1",
     "react-iscroll": "^1.1.1",
     "react-resizable": "^1.6.0",
     "react-sortable": "^1.2.0"
