--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-plugin-import": "^1.1.1",
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
+    "g2": "^2.2.6",
+    "g2-react": "^1.2.0",
     "iscroll": "^5.2.0",
     "jquery": "^3.2.0",
     "react": "^15.4.0",
